@@ -1,3 +1,6 @@
+2014/06/19 (1.2.13)
+- New command: ardj jabber probe.
+
 2014/06/09 (1.2.12)
 - Using VirtualEnv for local development and testing.
 - No longer installing system-wide config files (in /etc).
